--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,28 @@
 <body>
 
   Welcome to the HTML Portfolio Project
-
+<div class="header">
+  <h1>Dane DeHaan</h1>
+  <h2>Actor</h2>
+</div>
+<div class="tagline">
+  <h3>Bio</h3>
+  <p>Dane DeHaan has made a formidable impression on film and television audiences and is one of the industry's most sought after actors of his generation. Dane is shooting Gore Verbinski's A Cure for Wellness and will soon begin production starring in Luc Besson's Valerian.</p>
+</div>
+<div class="skills">
+  <h3>Filmography</h3>
+  <p>Last three</p>
+  <ul>
+    <li>Valerian and the City of a Thousand Planets</li>
+    <li>Major Valerian</li>
+    <li>2017 Tulip Fever</li>
+    <li>...</li>
+    <li>html</li>
+  </ul>
+</div>
+<div class="contact">
+  <h3>Resume</h3>
+  <p>More information <a href="http://www.imdb.com/name/nm2851530/?ref_=tt_cl_t2">imdb</a></p>
+</div>
 </body>
 </html>
